--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
   "name": "photoshop-print-layout-plugin",
   "version": "1.0.0",
-  "description": "UXP плагин для Adobe Photoshop - управление раскладкой принтов из XLSX таблиц",
-  "main": "index.js",
+  "description": "UXP плагин для управления раскладкой принтов с интеграцией XLSX таблиц",
+  "main": "index.html",
   "scripts": {
-    "build": "echo 'Building plugin...'",
-    "package": "uxp plugin package"
+    "build": "echo 'Ready for UXP Developer Tool'"
   },
   "keywords": [
     "photoshop",
     "uxp",
     "plugin",
-    "print-layout",
+    "print",
+    "layout",
     "xlsx"
   ],
   "author": "golovasya",
   "license": "MIT",
-  "dependencies": {
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "@types/photoshop": "^0.0.10"
-  }
+  "dependencies": {}
 }
